Fixed more bugs, added transition to buttons. Wrapping things up I think

--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,24 @@ nav li {
   font-size: 15px;
 }
 
+button {
+  background-color: #B163EC;
+  padding: 1em;
+  margin: .5em;
+  border-radius: 3em;
+  transition: all .1s linear 0s;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: #0F0503;
+  font-size: 16pt;
+}
+
+button:hover {
+  font-size: 18pt;
+  border-radius: 1em;
+  background-color: #2C7847;
+  color: #DBD1CF;
+}
+
 /* Hero Img */
 
 #heroImg {
@@ -162,6 +180,13 @@ nav li {
 /* Main Page */
 
 /* Section 1*/
+
+.toggleDesc {
+  max-width: 180px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 24px;
+}
+
 #teamIntro {
   text-align: center;
   padding-top: 150px;
@@ -591,7 +616,6 @@ nav li {
   justify-content: center;
 }
 
-
 .work {
   background-color: #7BAFF5;
   margin-bottom: 1em;
@@ -733,6 +757,7 @@ nav li {
   flex-direction: row;
   justify-content: space-between;
   padding: 20px 80px;
+  bottom: 0;
 }
 
 #foot p {
